--- a/contact.html
+++ b/contact.html
@@ -68,7 +68,7 @@
 <h2>Acknowledgements</h2>
 Numerous colleagues from the Natural Capital Project contributed to this website.  We would like to thank...<br>
 <b>Anne Guerry, Spencer Wood, Katie Arkema, Greg Guannel, Rob Griffin, Amy Rosenthal,<br>
-Jodie Toft, Lauren Rogers, Joey Bernhardt, CK Kim, Joe Faries, Kelly Biedenweg,<br>
+Jodie Toft, Lauren Rogers, Joey Bernhardt, CK Kim, Joe Faries, Yi Xi, Kelly Biedenweg,<br>
 Mike Papenfus, Jeremy Davies, Matt Marsik, Susan Langridge, and Mary Ruckelshaus</b>
 <p></p>
 Development of this website was made possible through support from the <b>Gordon and Betty Moore Foundation</b>.
