--- a/data.html
+++ b/data.html
@@ -205,7 +205,7 @@ Click on the links or hover over the map markers to learn more about these regio
 <li><a href="http://ctatlas.reefbase.org/" target="_blank"><b>Coral Triangle (CT) Atlas</b></a> - SE Asia</li>
 <li><a href="http://gulfatlas.noaa.gov/" target="_blank"><b>Gulf of Mexico Data Atlas</b></a> -  A catalog of regional datasets for modelers (time-series, climatologies, etc.)</li>
 <li><a href="http://portal.midatlanticocean.org/portal/" target="_blank"><b>Mid-Atlantic Ocean Data Portal (MARCO)</b></a>  - USA</li>
-<li><a href="https://ncei.noaa.gov/" target="_blank"><b>NOAA National Centers for Environmental Information (NCEI)</b></a><br>&nbsp;&nbsp;- Merges data from the National Climatic Data Center, National Geophysical Data Center, and National Oceanographic Data Center</li>
+<li><a href="https://ncei.noaa.gov/" target="_blank"><b>NOAA National Centers for Environmental Information (NCEI)</b></a><br>&nbsp;&nbsp;- Merges data from the National Climatic Data Center, National Geophysical and Oceanographic Data Centers</li>
 <li><a href="http://www.northeastoceandata.org/" target="_blank"><b>Northeast Ocean Data Portal</b></a> - USA</li>
 <li><a href="http://www.census.gov/data/data-tools.html" target="_blank"><b>US Census Bureau</b></a> - USA</li>
 <li><a href="http://www.ons.gov.uk/ons/guide-method/geography/products/census/index.html" target="_blank"><b>UK Office for National Statistics</b></a> - England and Wales</li>
@@ -260,15 +260,19 @@ Use the expand [+] button to learn more about this data compilation step in the 
 <h4>Mozambique</h4>
 Mozambique is a data limited region.  For this project, we worked closely with local partners to map spatial information about human uses, key habitats and animal species.  Google Earth was used as a simple platform to create and share maps and enable non-GIS users to generate and edit spatial data.  Conversations with local partners were critical in brainstorming simple ways to map key human uses, like artisanal fishing, which had not been mapped explicitly.  In this example, by combining information about fishing centers, with estimates of how far fishermen travel from those centers, we were able to create a good representation of different fishing activities.
 <p></p>
+<ul id="folio_scroller">
+<li><span>Google Earth screenshot of fishing activities near Angoche, Mozambique</span><img alt="" src="img/data_moz_folio_1.png" /></a></li>
+</ul> 
+<p></p>
 <h4>Barbados</h4>
 Our core Barbados project team was dispearsed throughout four different offices in the United States.  Since most of this collaboration was accomplished remotely, careful management of project data and outputs became essential.   We used free accounts with <a href="https://www.google.com/drive/" target="_blank">Google Drive</a> to store and track data we already had, datasets we could readily access if needed, and information we hoped to acquire.  This online system helped our partners document project data sources, including spatial resolution, map units and scale.  Preliminary results from InVEST models identified additional data needs and made it clear to our in-country collaborators how these data would be used in the assessment.
 <p></p>
 <ul id="folio_scroller">
-<li><span>This document to manage project data tracked our inputs to the InVEST coastal protection model (Nearshore Waves and Erosion).  This and other docs stored on Google Drive enabled the Barbados project team to make asynchornous edits, eliminating the need for version control.</span><img alt="" src="img/data_barb_folio_1.png" /></a></li>
+<li><span>This document stored on Google Drive helped track inputs to the InVEST coastal protection model (Nearshore Waves and Erosion).  This cloud-based file management system enabled the Barbados project team to make asynchornous edits, eliminating the need for version control.</span><img alt="" src="img/data_barb_folio_1.png" /></a></li>
 </ul> 
 <p></p>
 <h4>New England</h4>
-Coming soon
+The team in New England is using a variety of data sources to tackle some wide-ranging research questions. The <a href="http://www.northeastoceandata.org/" target="_blank">Northeast Ocean Data Portal</a> is a comprehensive online portal for MSP-relevant data.  The <a href="http://ned.usgs.gov/" target="_blank">US Geological Survey</a> and <a href="http://www.edc.uri.edu/rigis/" target="_blank">Rhode Island Geographic Information System</a> offer detailed digital elevation models (DEMs).  We are also using <a href="http://www.nefsc.noaa.gov/epd/ocean/MainPage/ioos.html" target="_blank">NOAA trawl survey fisheries and oceanographic data</a>.
 <p></p>
 </body>
 </html>
