--- a/scenarios.html
+++ b/scenarios.html
@@ -231,6 +231,8 @@ Use the expand [+] button to learn more about this scenario design step in the c
 SEE GITHUB ISSUE #6
 <h4>New England</h4>
 During meetings with stakeholders and agencies working in the New England area, it became clear that the word "scenario" was not the preferred terminology to describe future ocean uses.  NatCap continues work in the region to help provide decision makers with scientifically valid information to use for broader marine planning efforts.  See our <a href="http://www.naturalcapitalproject.org/where/newengland.html" target="_blank"><b>New England</b></a> use-case for more details.
+Our demonstration of new visibility and wind energy modeling tools assessed the suitability of the Deepwater Wind offshore wind farm, the likely first offshore wind energy farm in the U.S.
+<br>Our fisheries distribution shift modeling is based on IPCC climate change projections, downscaled to the region.
 <p></p>
 <h4>Belize</h4>
 <p>Scenarios reflecting three plausible futures for Belize's coastal development in the year 2025 were developed through a succession of government-led stakeholder meetings and workshops with communities along the entire coastline. These alternative scenarios are based on maps of the current distribution of ocean and coastal activities, existing and pending government plans, and stakeholders' values and preferences. The following set of rotating images describes this stakeholder-driven process where our government partner, the Coastal Zone Management and Institute (CZMAI), mapped three zoning configurations describing the location and extent of future human uses.</p><br><br>
