--- a/scope.html
+++ b/scope.html
@@ -177,8 +177,8 @@ By solidifying (not necessarily finalizing) project goals and objectives, your t
 &#x2714;&nbsp;Shared vision of practical outcomes including clear understanding of the questions to be answered and the results delivered<br>
 &#x2714;&nbsp;Project team with well-articulated roles and responsibilities <br>
 &#x2714;&nbsp;Work plan, including expected methodology and timeline<br>
-&#x2714;&nbsp;Preliminary assessment of available and needed resources<br>&nbsp;&nbsp;&nbsp;(e.g., data and information, local knowledge, team capacity, lines of communication to authorities and local experts, funding)<p></p>
-For more details on how scoping can help to solify project goals and expected outcomes, see our <a href="scope.html#use-cases">MSP use-cases</a> at the bottom of this page.
+&#x2714;&nbsp;Preliminary assessment of available and needed resources<br>&nbsp;&nbsp;&nbsp;(e.g., data, local knowledge, team capacity, lines of communication to authorities and local experts, funding)<p></p>
+For more details on how scoping can help solidify project goals, see our <a href="scope.html#use-cases">MSP use-cases</a> at the bottom of this page.
 <p></p>
 <a name="tips"></a><div class="hr dotted clearfix">&nbsp;</div>
 <img src="img/headers/tips_sm.png" align="left"><h2>&nbsp;&nbsp;Tip</h2>
@@ -226,7 +226,7 @@ Remember that decision-making is exceedingly complex and to have appropriate exp
 Use the expand [+] button to learn more about this scoping step in the context of select NatCap use-cases.<a class="float right" href="#">top</a>
 <p></p>
 <h4>Barbados</h4>
-To aid in the development of a coastal management plan for Barbados, NatCap worked with key organizational partners to scope our work.  As part of the scoping, we conducted a literature review and gap analysis. From this work and from conversations with key players in the region, we outlined the provisioning, regulating, and cultural ecosystem services of interest and identified threats to these services.  The project team then collected, reviewed, and synthesized available literature and spatial data.  In addition to this synthesis, preliminary runs of select InVEST models were used to identify data gaps.  The literature review and data gap assessment not only organized key information, but also served as a method to gain consensus about priority ecosystem services in Barbados and the steps needed to complete a marine spatial plan.<p></p>
+To aid in the development of a coastal management plan for Barbados, NatCap worked with key organizational partners to scope our work. As part of the scoping, we conducted a literature review and gap analysis. From this work and from conversations with key players in the region, we outlined the provisioning, regulating, and cultural ecosystem services of interest and identified threats to these services. The project team then collected, reviewed, and synthesized available literature and spatial data. In addition to this synthesis, preliminary runs of select InVEST models were used to identify data gaps. The literature review and data gap assessment not only organized key information, but also served as a method to gain consensus about priority ecosystem services in Barbados and the steps needed to complete a marine spatial plan.<p></p>
 <li><u>Geographic area</u>: <b>Barbados</b></li>
 <li><u>Project team</u>: <b>Downstream Strategies, NatCap, Inter-American Development Bank (IDB), World Wildlife Fund, The Nature Conservancy</b></li>
 <li><u>Policy window and timeline</u>: <b>One-year pilot study funded by the IDB</b></li>
@@ -235,19 +235,20 @@ To aid in the development of a coastal management plan for Barbados, NatCap work
 <li><u>Expected outcomes</u>: (1) Justification for the priority ecosystem services that were selected and discussion of affected beneficiaries; (2) Identification of threats to coastal habitats; (3) Development of alternative future management scenarios; (4) Quantification of ecosystem services under each alternative development scenario and comparative analysis</li>
 <p></p>
 <h4>New England</h4>
-xxx<p></p>
-<li><u>Geographic area</u>: xxx</li>
-<li><u>Project team</u>: xxx</li>
-<li><u>Policy window and timeline</u>: xxx</li>
-<li><u>Important issues and ecosystem components</u>: xxx</li>
-<li><u>Specific questions asked</u>: xxx</li>
-<li><u>Expected outcomes</u>: xxx</li>
+Our work in New England spans across multiple ecosystem service categories and planning contexts. We are providing new tools to incorporate visibility as part of multi-criteria development siting decisions, conducting ecosystem service and cumulative impact mapping, and assessing the potential impact on port communities of shifting fish distributions from climate change. The Northeast Regional Planning Body is currently deliberating marine spatial planning goals/outcomes and we are engaging with this process to shape the research program to be responsive to the needs of this work as well as other regional initiatives like NOAA's Integrated Ecosystem Assessment Program. This work is being conducted with partners at NOAA's Northeast Fisheries Science Center and Rutgers University. 
+<p></p>
+<li><u>Geographic area</u>: <b>New England, United States</b></li>
+<li><u>Project team</u>: <b>Natural Capital Project staff, NOAA Northeast Fisheries Science Center, Rutgers University and Princeton University</b></li>
+<li><u>Policy window and timeline</u>: <b>2012 - 2016</b></li>
+<li><u>Important issues and ecosystem components</u>: Fisheries, Wind Energy, Scenic Quality, Cumulative Impacts of Human Activities, Climate Change</li>
+<li><u>Specific questions asked</u>: Where to site activities when there are overlapping uses in the ocean? How will fishing communities be impacted by shifting fish populations? Where are human activities impacting the provision of ecosystem services?</li>
+<li><u>Expected outcomes</u>: Replicable tools and methodologies for assessing visibility, changes in fish distribution, and the provision of ecosystem services across space. Research papers documenting these methods in the context of New England. New maps and data for consideration in regional MSP, publicly hosted by NatCap or partners.</li>
 <p></p>
 <h4>Bahamas</h4>
-xxx<p></p>
-<li><u>Geographic area</u>: Andros Island</li>
-<li><u>Project team</u>: Inter-American Development Bank, NatCap, TNC-Bahamas</li>
-<li><u>Policy window and timeline</u>: xxx</li>
+[INFO FROM KATIE]<p></p>
+<li><u>Geographic area</u>: <b>Andros Island</b></li>
+<li><u>Project team</u>: <b>Inter-American Development Bank, NatCap, TNC-Bahamas</b></li>
+<li><u>Policy window and timeline</u>: <b>One-year study funded by the IDB</b></li>
 <li><u>Important issues and ecosystem components</u>: xxx</li>
 <li><u>Specific questions asked</u>: xxx</li>
 <li><u>Expected outcomes</u>: xxx</li>
