--- a/data.html
+++ b/data.html
@@ -149,7 +149,7 @@ window.onload = function (evt) {
 <body>
 <h1>Step 2: Data (Compile Information)</h1>
 <img src="img/headers/overview_sm.png" align="left"><h2>&nbsp;&nbsp;Overview</h2>
-MSP typically relies on both spatial and non-spatial information characterizing the coastal and marine space. An organized collection of information is useful for all types of participants involved in MSP.  Data allow you to visualize the locations of current environments and human activities and serve as a foundation for discussions of future plans.  Often, data also serve as inputs to predictive models and <a href="analyze.html#tools">MSP decision-support tools</a>.  Other times data are used to visually depict or quantify elements of scenarios (<a href="scenario.html"><b>Scenario</b></a> step).  The uses for the data should be clearly identified before data are collected – often based on the goals established during the <a href="scope.html"><b>Scoping</b></a> and <a href="analyze.html"><b>Analyze</b></a> steps.
+MSP typically relies on both spatial and non-spatial information characterizing the coastal and marine space. An organized collection of information is useful for all types of participants involved in MSP.  Data allow you to visualize the locations of current environments and human activities and serve as a foundation for discussions of future plans.  Often, data also serve as inputs to predictive models and <a href="analyze.html#tools">MSP decision-support tools</a>.  Other times data are used to visually depict or quantify elements of <a href="scenario.html"><b>Scenarios</b></a>.  The uses for the data should be clearly identified before data are collected – often based on the goals established during the <a href="scope.html"><b>Scope</b></a> and <a href="analyze.html"><b>Analyze</b></a> steps.
 Generally, useful data include biophysical and oceanographic information such as elevation and bathymetry, maps of human activities such as transportation routes or fishing grounds, the distribution of coastal and marine habitats, and socioeconomic data like those provided by official censuses.  When monetary valuation is a part of the assessment, additional data on market prices or property values may also be pertinent.
 
 <p></p>
@@ -177,39 +177,39 @@ Generally, useful data include biophysical and oceanographic information such as
 <a name="databases"></a><div class="hr dotted clearfix">&nbsp;</div>
 <img src="img/headers/databases_sm.png" align="left"><h2>&nbsp;&nbsp;Global Databases</h2>
 There are many useful MSP data sources available online, including:
-<li><a href="http://www.bluehabitats.org/" target="_blank"><b>Blue Habitats</b></a> - Home to the global <b>seafloor geomorphic features map</b></li>
-<li><a href="http://www.imf.org/external/data.htm" target="_blank"><b>The International Monetary Fund</b></a> - A range of time series data on IMF lending, exchange rates and other <b>economic and financial indicators</b></li>
-<li><a href="http://marinexplore.org/browse/" target="_blank"><b>MarineExplore.org</b></a> - The world's <b>ocean data</b> at your fingertips; access measurements and create datasets</li>
-<li><a href="http://modis.gsfc.nasa.gov/data/dataprod/" target="_blank"><b>MODIS</b></a> - Products from a variety of disciplines, including <b>oceanography, biology, and atmospheric science</b></li>
-<li><a href="http://www.naturalearthdata.com/" target="_blank"><b>Natural Earth</b></a> - A <b>cartographic dataset</b> available at 1:10m, 1:50m, and 1:110 million scales</li>
-<li><a href="https://data.nceas.ucsb.edu/" target="_blank"><b>NCEAS Data Repository</b></a> - Research datasets collected and collated as part of <b>research synthesis</b> activities</li>
-<li><a href="http://marinecadastre.gov/" target="_blank"><b>NOAA Multipurpose Marine Cadaster</b></a> - Data for the <b>offshore energy and marine planning communities</b></li>
-<li><a href="http://openfisheries.org/" target="_blank"><b>OpenFisheries.org</b></a> - A platform for aggregating <b>global fishery data</b></li>
-<li><a href="http://www.openstreetmap.org/" target="_blank"><b>OpenStreetMap</b></a> - Download points, lines, and polygons representing a wide range of <a href="http://wiki.openstreetmap.org/wiki/Map_Features"><b>cultural features</b></a></li>
-<li><a href="http://www.wri.org/our-work/project/reefs-risk" target="_blank"><b> Reefs at Risk Database</b></a> - A global database of <b>coral reefs</b> and threats from a wide range of human activities</li>
-<li><a href="http://data.unep-wcmc.org/" target="_blank"><b>UNEP Ocean Data Viewer</b></a> - Data for the conservation of <b>marine and coastal biodiversity</b></li>
-<li><a href="http://glovis.usgs.gov/" target="_blank"><b>USGS Global Visualization Viewer</b></a> - A global, searchable database of historical <b>Landsat imagery</b></li>
-<li><a href="http://data.worldbank.org/country" target="_blank"><b>The World Bank</b></a> - <b>Socioeconomic indicators and microdata</b> by country</li>
-<li><a href="http://www.worldpop.org.uk/data/" target="_blank"><b>Worldpop</b></a> - High resolution, contemporary data on <b>human population</b> distributions</li>
+<li><a href="http://www.bluehabitats.org/" target="_blank">Blue Habitats</a> - Home to the global <b>seafloor geomorphic features map</b></li>
+<li><a href="http://www.imf.org/external/data.htm" target="_blank">The International Monetary Fund</a> - A range of time series data on IMF lending, exchange rates and other <b>economic and financial indicators</b></li>
+<li><a href="http://marinexplore.org/browse/" target="_blank">MarineExplore.org</a> - The world's <b>ocean data</b> at your fingertips; access measurements and create datasets</li>
+<li><a href="http://modis.gsfc.nasa.gov/data/dataprod/" target="_blank">MODIS</a> - Products from a variety of disciplines, including <b>oceanography, biology, and atmospheric science</b></li>
+<li><a href="http://www.naturalearthdata.com/" target="_blank">Natural Earth</a> - A <b>cartographic dataset</b> available at 1:10m, 1:50m, and 1:110 million scales</li>
+<li><a href="https://data.nceas.ucsb.edu/" target="_blank">NCEAS Data Repository</a> - Research datasets collected and collated as part of <b>research synthesis</b> activities</li>
+<li><a href="http://marinecadastre.gov/" target="_blank">NOAA Multipurpose Marine Cadaster</a> - Data for the <b>offshore energy and marine planning communities</b></li>
+<li><a href="http://openfisheries.org/" target="_blank">OpenFisheries.org</a> - A platform for aggregating <b>global fishery data</b></li>
+<li><a href="http://www.openstreetmap.org/" target="_blank">OpenStreetMap</a> - Download points, lines, and polygons representing a wide range of <a href="http://wiki.openstreetmap.org/wiki/Map_Features"><b>cultural features</b></a></li>
+<li><a href="http://www.wri.org/our-work/project/reefs-risk" target="_blank">Reefs at Risk Database</a> - A global database of <b>coral reefs</b> and threats from a wide range of human activities</li>
+<li><a href="http://data.unep-wcmc.org/" target="_blank">UNEP Ocean Data Viewer</a> - Data for the conservation of <b>marine and coastal biodiversity</b></li>
+<li><a href="http://glovis.usgs.gov/" target="_blank">USGS Global Visualization Viewer</a> - A global, searchable database of historical <b>Landsat imagery</b></li>
+<li><a href="http://data.worldbank.org/country" target="_blank">The World Bank</a> - <b>Socioeconomic indicators and microdata</b> by country</li>
+<li><a href="http://www.worldpop.org.uk/data/" target="_blank">Worldpop</a> - High resolution, contemporary data on <b>human population</b> distributions</li>
 <p></p>
 <img src="img/headers/databases_sm.png" align="left"><h2>&nbsp;&nbsp;Regional Databases</h2>
 Click on the links or hover over the map markers to learn more about these regional MSP databases.
-<li><a href="http://omap.africanmarineatlas.org/index.htm" target="_blank"><b>Africa Marine Atlas</b></a> - Africa</li>
-<li><a href="http://alaskafisheries.noaa.gov/shorezone/" target="_blank"><b>Alaska Shorezone Coastal Mapping and Imagery</b></a> - USA</li>
-<li><a href="http://www.ga.gov.au/scientific-topics/marine/jurisdiction/amsis" target="_blank"><b>Australian Marine Spatial Information System (AMSIS)</b></a> - Australia</li>
-<li><a href="http://data.bshc.pro/" target="_blank"><b>Baltic Sea Bathymetry Database</b></a>  - Northern Europe</li>
-<li><a href="http://www.biodiversity.bz/" target="_blank"><b>Biodiversity and Environmental Resource Data System of Belize (BERDS)</b></a> - Belize</li>
-<li><a href="http://bcmca.ca/maps-data/overview/" target="_blank"><b>British Columbia Marine Conservation Analysis (BCMCA)</b></a> - Canada</li>
-<li><a href="http://www.c3a.ihcantabria.com/" target="_blank"><b>C3A</b></a> - Regional database on the effects of climate change for the coasts of Latin America and the Caribbean</li>
-<li><a href="http://www.dfg.ca.gov/marine/gis/" target="_blank"><b>California DFW: Marine Region GIS Unit</b></a> - USA</li>
-<li><a href="http://ctatlas.reefbase.org/" target="_blank"><b>Coral Triangle (CT) Atlas</b></a> - SE Asia</li>
-<li><a href="http://gulfatlas.noaa.gov/" target="_blank"><b>Gulf of Mexico Data Atlas</b></a> -  A catalog of regional datasets for modelers (time-series, climatologies, etc.)</li>
-<li><a href="http://portal.midatlanticocean.org/portal/" target="_blank"><b>Mid-Atlantic Ocean Data Portal (MARCO)</b></a>  - USA</li>
-<li><a href="https://ncei.noaa.gov/" target="_blank"><b>NOAA National Centers for Environmental Information (NCEI)</b></a><br>&nbsp;&nbsp;- Merges data from the National Climatic Data Center, National Geophysical and Oceanographic Data Centers</li>
-<li><a href="http://www.northeastoceandata.org/" target="_blank"><b>Northeast Ocean Data Portal</b></a> - USA</li>
-<li><a href="http://www.census.gov/data/data-tools.html" target="_blank"><b>US Census Bureau</b></a> - USA</li>
-<li><a href="http://www.ons.gov.uk/ons/guide-method/geography/products/census/index.html" target="_blank"><b>UK Office for National Statistics</b></a> - England and Wales</li>
-<li><a href="http://ned.usgs.gov/" target="_blank"><b>USGS National Elevation Dataset (NED)</b></a> - USA</li>
+<li><a href="http://omap.africanmarineatlas.org/index.htm" target="_blank">Africa Marine Atlas</a> - <b>Africa</b></li>
+<li><a href="http://alaskafisheries.noaa.gov/shorezone/" target="_blank">Alaska Shorezone Coastal Mapping and Imagery</a> - <b>USA</b></li>
+<li><a href="http://www.ga.gov.au/scientific-topics/marine/jurisdiction/amsis" target="_blank">Australian Marine Spatial Information System (AMSIS)</a> - <b>Australia</b></li>
+<li><a href="http://data.bshc.pro/" target="_blank">Baltic Sea Bathymetry Database</a> - <b>Northern Europe</b></li>
+<li><a href="http://www.biodiversity.bz/" target="_blank">Biodiversity and Environmental Resource Data System of Belize (BERDS)</a> - <b>Belize</b></li>
+<li><a href="http://bcmca.ca/maps-data/overview/" target="_blank">British Columbia Marine Conservation Analysis (BCMCA)</a> - <b>Canada</b></li>
+<li><a href="http://www.c3a.ihcantabria.com/" target="_blank">C3A</a> - Regional database on the effects of climate change for the coasts of <b>Latin America and the Caribbean</b></li>
+<li><a href="http://www.dfg.ca.gov/marine/gis/" target="_blank">California DFW: Marine Region GIS Unit</a> - <b>USA</b></li>
+<li><a href="http://ctatlas.reefbase.org/" target="_blank">Coral Triangle (CT) Atlas</a> - <b>SE Asia</b></li>
+<li><a href="http://gulfatlas.noaa.gov/" target="_blank">Gulf of Mexico Data Atlas</a> -  A catalog of regional datasets for modelers (time-series, climatologies, etc.)</li>
+<li><a href="http://portal.midatlanticocean.org/portal/" target="_blank">Mid-Atlantic Ocean Data Portal (MARCO)</a> - <b>USA</b></li>
+<li><a href="https://ncei.noaa.gov/" target="_blank">NOAA National Centers for Environmental Information (NCEI)</a><br>&nbsp;&nbsp;- Merges data from the National Climatic Data Center, National Geophysical and Oceanographic Data Centers</li>
+<li><a href="http://www.northeastoceandata.org/" target="_blank">Northeast Ocean Data Portal</a> - <b>USA</b></li>
+<li><a href="http://www.census.gov/data/data-tools.html" target="_blank">US Census Bureau</a> - <b>USA</b></li>
+<li><a href="http://www.ons.gov.uk/ons/guide-method/geography/products/census/index.html" target="_blank">UK Office for National Statistics</a> - <b>England and Wales</b></li>
+<li><a href="http://ned.usgs.gov/" target="_blank">USGS National Elevation Dataset (NED)</a> - <b>USA</b></li>
 <p></p>
 <ul id="folio_scroller">
 <li><span>Regional MSP Databases</span><iframe width='600px' height='300px' frameBorder='0' src='reg_msp_data.html'></iframe></li>
@@ -222,10 +222,10 @@ Click on the links or hover over the map markers to learn more about these regio
 <img src="img/on_ramp.png"><br>
 Spatial and tabular data typically require some amount of processing before they can be plugged into InVEST or other <a href="analyze.html#tools">MSP decision-support tools</a>. Data processing is a challenging but necessary step. NatCap has created helper tools and documentation to assist InVEST users with preparing and formatting data inputs for analyzing ecosystem service outcomes: 
 <ol>
-<li><a href="http://naturalcapitalproject.org/pubs/InVEST_DataRequirements_June2014.xlsx" target="_blank"><b>InVEST 3.x Data Requirements</b></a> - A spreadsheet listing the required and optional inputs for each InVEST model</li>
-<li><a href="http://ncp-dev.stanford.edu/~dataportal/nightly-build/release_tip/release_tip/documentation/" target="_blank"><b>InVEST 3.x User's Guide</b></a> - Each chapter includes a "Data Needs" section that outlines input and formatting requirements for InVEST models</li>
-<li><a href="docs/MSP_HelperToolbox.zip" target="_blank"><b>MSP Helper Tools</b></a> - A GIS toolbox for pre-processing data to be used with marine InVEST models (<i>requires ArcGIS 10.x license</i>)</li>
-<li><a href="http://forums.naturalcapitalproject.org/index.php?p=/categories/experimental-software-tools" target="_blank"><b>Experimental Software Tools</b></a> - A discussion thread where NatCap staff and members of our community of practice share details about new software tools</li>
+<li><a href="http://naturalcapitalproject.org/pubs/InVEST_DataRequirements_June2014.xlsx" target="_blank">InVEST 3.x Data Requirements</a> - A spreadsheet listing the required and optional inputs for each InVEST model</li>
+<li><a href="http://ncp-dev.stanford.edu/~dataportal/nightly-build/release_tip/release_tip/documentation/" target="_blank">InVEST 3.x User's Guide</a> - Each chapter includes a "Data Needs" section that outlines input and formatting requirements for InVEST models</li>
+<li><a href="docs/MSP_HelperToolbox.zip" target="_blank">MSP Helper Tools</a> - A GIS toolbox for pre-processing data to be used with marine InVEST models (<i>requires ArcGIS 10.x license</i>)</li>
+<li><a href="http://forums.naturalcapitalproject.org/index.php?p=/categories/experimental-software-tools" target="_blank">Experimental Software Tools</a> - A discussion thread where NatCap staff and members of our community of practice share details about new software tools</li>
 </ol>
 <p></p>
 <a name="faq"></a><div class="hr dotted clearfix">&nbsp;</div>
@@ -245,7 +245,7 @@ Spatial and tabular data typically require some amount of processing before they
 <li>Cornu, Elodie, et al. "Current Practice and Future Prospects for Social Data in Coastal and Ocean Planning." <i>Conservation Biology</i> (2014). <a href="http://onlinelibrary.wiley.com/doi/10.1111/cobi.12310/full" target="_blank">doi:10.1111/cobi.12310</a></li>
 <li>Kittinger, John N., et al. "A practical approach for putting people in ecosystem-based ocean planning." <i>Frontiers in Ecology and the Environment</i> 12.8 (2014): 448-456. <a href="http://dx.doi.org/10.1890/130267" target="_blank">http://dx.doi.org/10.1890/130267</a></li>
 <li>Koehn, J. Zachary, Daniel R. Reineman, and John N. Kittinger. "Progress and promise in spatial human dimensions research for ecosystem-based ocean planning." <i>Marine Policy</i> 42 (2013): 31-38. <a href="http://www.sciencedirect.com/science/article/pii/S0308597X13000249" target="_blank">doi:10.1016/j.marpol.2013.01.015</a></li>
-<li><a href="http://csc.noaa.gov/digitalcoast/tools/list" target="_blank"><b>NOAA Digital Coast</b></a><br>
+<li><a href="http://csc.noaa.gov/digitalcoast/tools/list" target="_blank">NOAA Digital Coast</a><br>
 - <a href="http://coast.noaa.gov/digitalcoast/tools/port" target="_blank">Port Resilience Planning Tool</a> - Identify potential considerations (e.g., hazards, transportation) for planning around ports (includes data for 26 US ports)<br>
 - <a href="http://coast.noaa.gov/digitalcoast/tools/snapshots" target="_blank">Coastal Country Snapshots</a> - Summarizes community economic dependence on the coast and its vulnerability<br>  
 - <a href="http://coast.noaa.gov/digitalcoast/tools/btm" target="_blank">Benthic Terrain Modeler</a> - Tools that scientists and resource managers can use with bathymetric data to classify and understand the benthic environment<br>
