--- a/scope.html
+++ b/scope.html
@@ -214,11 +214,11 @@ Remember that decision-making is exceedingly complex and to have appropriate exp
 <li>Halpern, Benjamin S., et al. "Near-term priorities for the science, policy and practice of Coastal and Marine Spatial Planning (CMSP)." <i>Marine Policy</i> 36.1 (2012): 198-205.<a href="http://www.sciencedirect.com/science/article/pii/S0308597X11000935" target="_blank"> doi:10.1016/j.marpol.2011.05.004</a> (See "Section 2.1. Process")</li>
 <li>Rosenthal, Amy, et al. "Process matters: a framework for conducting decision-relevant assessments of ecosystem services." <i>International Journal of Biodiversity Science, Ecosystem Services & Management</i> (2014): 1-15. <a href="docs/Rosenthal_etal_2014_IJBSESM.pdf" target="_blank">doi:10.1080/21513732.2014.966149</a> (See "Section 4.1. Scope")</li>
 <li>Waite, Richard, et al. "Coastal capital: ecosystem valuation for decision making in the Caribbean</a>." World Resources Institute, 2014. <a href="http://eprints.soton.ac.uk/362289/" target="_blank">http://eprints.soton.ac.uk/id/eprint/362289</a> (See "Phase 1: Scope", pp. 15-24)</li>
-<li><a href="http://openchannels.org/" target="_blank"><b>OpenChannels</b></a> - An online community of ocean planners and managers sharing experience, knowledge, and advice</li>
-<li><a href="http://searchmesh.org/default.aspx?page=1931" target="_blank"><b>MESH Scoping Tool</b></a> - A Flash interactive tool and guidance for undertaking an ocean  mapping/survey project</li>
-<li><a href="http://marineecosystemservices.org/" target="_blank"><b>Marine Ecosystem Services Partnership</b></a> - A searchable database of nearly 900 studies on marine ES valuation</li>
-<li><a href="http://bluesolutions.info/solutions/" target="_blank"><b>Blue Solutions</b></a> - A database of solutions to coastal-marine challenges that are impactful, scalable, and can be replicated</li>
-<li><a href="http://www.cmspadvancement.com/" target="_blank"><b>CMSP Advancement Training</b></a> - Free training in the United States for coastal managers and MSP practitioners</li>
+<li><a href="http://openchannels.org/" target="_blank">OpenChannels</a> - An online community of ocean planners and managers sharing experience, knowledge, and advice</li>
+<li><a href="http://searchmesh.org/default.aspx?page=1931" target="_blank">MESH Scoping Tool</a> - A Flash interactive tool and guidance for undertaking an ocean  mapping/survey project</li>
+<li><a href="http://marineecosystemservices.org/" target="_blank">Marine Ecosystem Services Partnership</a> - A searchable database of nearly 900 studies on marine ES valuation</li>
+<li><a href="http://bluesolutions.info/solutions/" target="_blank">Blue Solutions</a> - A database of solutions to coastal-marine challenges that are impactful, scalable, and can be replicated</li>
+<li><a href="http://www.cmspadvancement.com/" target="_blank">CMSP Advancement Training</a> - Free training in the United States for coastal managers and MSP practitioners</li>
 </ul>
 <p></p>
 <a name="use-cases"></a><div class="hr dotted clearfix">&nbsp;</div>
@@ -237,7 +237,7 @@ To aid in the development of a coastal management plan for Barbados, NatCap work
 <h4>New England</h4>
 Our work in New England spans across multiple ecosystem service categories and planning contexts. We are providing new tools to incorporate visibility as part of multi-criteria development siting decisions, conducting ecosystem service and cumulative impact mapping, and assessing the potential impact on port communities of shifting fish distributions from climate change. The Northeast Regional Planning Body is currently deliberating marine spatial planning goals/outcomes and we are engaging with this process to shape the research program to be responsive to the needs of this work as well as other regional initiatives like NOAA's Integrated Ecosystem Assessment Program. This work is being conducted with partners at NOAA's Northeast Fisheries Science Center and Rutgers University. 
 <p></p>
-<li><u>Geographic area</u>: <b>New England, United States</b></li>
+<li><u>Geographic area</u>: <b>New England (Connecticut, Rhode Island, Massachusetts, New Hampshire, Maine), USA</b></li>
 <li><u>Project team</u>: <b>Natural Capital Project staff, NOAA Northeast Fisheries Science Center, Rutgers University and Princeton University</b></li>
 <li><u>Policy window and timeline</u>: <b>2012 - 2016</b></li>
 <li><u>Important issues and ecosystem components</u>: Fisheries, Wind Energy, Scenic Quality, Cumulative Impacts of Human Activities, Climate Change</li>
@@ -245,7 +245,7 @@ Our work in New England spans across multiple ecosystem service categories and p
 <li><u>Expected outcomes</u>: Replicable tools and methodologies for assessing visibility, changes in fish distribution, and the provision of ecosystem services across space. Research papers documenting these methods in the context of New England. New maps and data for consideration in regional MSP, publicly hosted by NatCap or partners.</li>
 <p></p>
 <h4>Bahamas</h4>
-[INFO FROM KATIE]<p></p>
+Info coming soon!<p></p>
 <li><u>Geographic area</u>: <b>Andros Island</b></li>
 <li><u>Project team</u>: <b>Inter-American Development Bank, NatCap, TNC-Bahamas</b></li>
 <li><u>Policy window and timeline</u>: <b>One-year study funded by the IDB</b></li>
