Last changes before beta test
Final edits and additions.  Wow - that took forever!

--- a/gallery.html
+++ b/gallery.html
@@ -32,7 +32,7 @@
         This is a gallery of figures that display results from a variety of marine spatial planning projects and marine ecosystem service mapping projects. This gallery is a place to get ideas and see examples of effective ways to present data on these themes. 
         <br>
         <br>
-        To suggest an addition to the gallery please email ______@____ (SUBJECT: "MSP Viz Gallery") with a url to a figure (or send the figure as an attachement), along with a short caption and the author's name.
+        To suggest an addition to the gallery please email gverutes@stanford.edu (SUBJECT: "MSP Viz Gallery") with a url to a figure (or send the figure as an attachement), along with a short caption and the author's name.
         Every entry in this gallery is copyrighted by its author. Feel free to email or <a href="https://github.com/geointerest/msp_concierge_master/issues">submit a message</a> for correcting errors or suggesting improvements for this site.
         <br>
         <h3>Credits</h3>
