--- a/marine_invest.html
+++ b/marine_invest.html
@@ -151,27 +151,58 @@ window.onload = function (evt) {
 <img src="img/logo_InVEST.jpg" align="left">InVEST is a suite of software models used to <b>map and value the goods and services from nature that sustain and fulfill human life</b>.  The toolkit can aid decision makers to assess quantified tradeoffs associated with alternative management choices and to identify areas where investment in natural capital can enhance human development and conservation.
 <p></p>
 Some of the models within InVEST can be applied for coastal-marine ecosystem assessment, planning and management.
-<b><a href="http://www.naturalcapitalproject.org/download.html" target="_blank">Click here</a></b> to download the latest version of InVEST.
+<b><a href="http://msp.naturalcapitalproject.org/download/">Click here</a> to download the InVEST MSP Toolset</b>.
+<p></p>
+<ul id="folio_scroller">
+<li><span>Diagram showing potential linkages across InVEST models.  We consider a linkage to be when outputs of one model are used as inputs to another.</span><a href="img/invest_linkages.png" target="_blank"><img alt="" src="img/invest_linkages.png" /></a></li>
+</ul> 
+<p></p><br>
+<div class="hr dotted clearfix">&nbsp;</div>
+<img src="img/headers/tools_sm.png" align="left"><h2>&nbsp;&nbsp;Marine InVEST</h2>
+Use the expand [+] button to learn more about InVEST models and tools for coastal and marine spatial planning.  Names of tools in <i>italics</i> indicate supporting service models or tools.    
+<p></p>
+<h4>&#8226; <i>Coastal Vulnerability</i></h4>
+<table>
+<tr><td><b>Purpose</b></td><td>Uses geophysical and natural habitat characteristics of coastal landscapes to compare their exposure to erosion and flooding in severe weather</td></tr>
+<tr><td><b>Links</b></td><td><a href="http://www.naturalcapitalproject.org/models/coastal_vulnerability.html" target="_blank">Summary</a> | <a href="http://data.naturalcapitalandresilienceplatform.org/nightly-build/release_tip/release_tip/documentation/coastal_vulnerability.html" target="_blank">Documentation</a></td></tr>
+<tr><td><b>Use-Cases</b></td><td>Barbados | Belize | California | Mozambique | New England | Vancouver Island</td></tr>
+<tr><td><b>Publications</b></td><td>Arkema, Katie K., et al. "Coastal habitats shield people and property from sea-level rise and storms." <i>Nature Climate Change</i> (2013). <a href="docs/Arkema_etal_2013_NCC.pdf" target="_blank">doi:10.1038/nclimate1944</a><br>Langridge, Suzanne M., et al. "Key lessons for incorporating natural infrastructure into regional climate adaptation planning." <i>Ocean & Coastal Management</i> 95 (2014): 189-197. <a href="docs/Langridge_etal_2014_OCM.pdf" target="_blank">doi:10.1016/j.ocecoaman.2014.03.019</a></td></tr>
+</table>
 <p></p>
 <div class="hr dotted clearfix">&nbsp;</div>
-<img src="img/headers/tools_sm.png" align="left"><h2>&nbsp;&nbsp;Marine InVEST for MSP</h2>
-Use the expand [+] button to learn more about InVEST models and tools that can be applied for MSP.
+<h4>&#8226; <i>Habitat Risk Assessment</i></h4>
+<table>
+<tr><td><b>Purpose</b></td><td>Evaluates risks posed to multiple habitats in terms of exposure to human activities and the habitat-specific consequence of that exposure for delivery of environmental services</td></tr>
+<tr><td><b>Links</b></td><td><a href="http://www.youtube.com/embed/EMOJa-XklB0" target="_blank">Video</a> | <a href="http://www.naturalcapitalproject.org/models/habitat_risk.html" target="_blank">Summary</a> | <a href="http://data.naturalcapitalandresilienceplatform.org/nightly-build/release_tip/release_tip/documentation/habitat_risk_assessment.html" target="_blank">Documentation</a></td></tr>
+<tr><td><b>Use-Cases</b></td><td>Barbados | Belize | Mozambique | Vancouver Island</td></tr>
+<tr><td><b>Publications</b></td><td>Arkema, Katie K., et al. "Assessing habitat risk from human activities to inform coastal and marine spatial planning: a demonstration in Belize." <i>Environmental Research Letters</i> 9.11 (2014): 114016. <a href="docs/Arkema_etal_2014_EL.pdf" target="_blank">doi:10.1088/1748-9326/9/11/114016</a><br>Guerry, Anne D., et al. "Modeling benefits from nature: using ecosystem services to inform coastal and marine spatial planning." <i>International Journal of Biodiversity Science, Ecosystem Services & Management</i> 8.1-2 (2012): 107-121. <a href="docs/Guerry_etal_2012_IJBSESM.pdf" target="_blank">doi:10.1080/21513732.2011.647835</a></td></tr>
+</table>
 <p></p>
+<div class="hr dotted clearfix">&nbsp;</div>
+<h4>&#8226; <i>Marine Water Quality</i></h4>
+<table>
+<tr><td><b>Purpose</b></td><td>Assesses how management and human activities influence the water quality and structure of coastal and estuarine ecosystems</td></tr>
+<tr><td><b>Links</b></td><td><a href="http://www.naturalcapitalproject.org/models/marine_water_quality.html" target="_blank">Summary</a> | <a href="http://data.naturalcapitalandresilienceplatform.org/nightly-build/release_tip/release_tip/documentation/marine_water_quality.html" target="_blank">Documentation</a></td></tr>
+<tr><td><b>Use-Cases</b></td><td>Vancouver Island</td></tr>
+<tr><td><b>Publications</b></td><td>Guerry, Anne D., et al. "Modeling benefits from nature: using ecosystem services to inform coastal and marine spatial planning." <i>International Journal of Biodiversity Science, Ecosystem Services & Management</i> 8.1-2 (2012): 107-121. <a href="docs/Guerry_etal_2012_IJBSESM.pdf" target="_blank">doi:10.1080/21513732.2011.647835</a></td></tr>
+</table>
+<p></p>
+<div class="hr dotted clearfix">&nbsp;</div>
+<h4>&#8226; <i>Overlap Analysis</i></h4>
+<table>
+<tr><td><b>Purpose</b></td><td>Estimates the relative importance of regions for human use; outputs can help decision-makers weigh potential conflicts among spatially-explicit management options that involve new activities or new infrastructure</td></tr>
+<tr><td><b>Links</b></td><td><a href="http://www.naturalcapitalproject.org/models/overlap_analysis.html" target="_blank">Summary</a> | <a href="http://data.naturalcapitalandresilienceplatform.org/nightly-build/release_tip/release_tip/documentation/overlap_analysis.html" target="_blank">Documentation</a></td></tr>
+<tr><td><b>Use-Cases</b></td><td>Belize | New England | Vancouver Island</td></tr>
+<tr><td><b>Publications</b></td><td>Kim, Choong-Ki, et al. "Catching the Right Wave: Evaluating Wave Energy Resources and Potential Compatibility with Existing Marine and Coastal Uses." <i>PloS one</i> 7.11 (2012): e47598. <a href="docs/Kim_etal_2012_PLOSONE.pdf" target="_blank">doi:10.1371/journal.pone.0047598</a></td></tr>
+</table>
+<p></p>
+<div class="hr dotted clearfix">&nbsp;</div>
 <h4>&#8226; Coastal Blue Carbon</h4>
 <table>
 <tr><td><b>Purpose</b></td><td>Estimates the current amount of carbon stored in coastal-marine ecosystems and values the amount of sequestered carbon over time</td></tr>
 <tr><td><b>Links</b></td><td><a href="http://www.naturalcapitalproject.org/models/blue_carbon.html" target="_blank">Summary</a> | <a href="http://data.naturalcapitalandresilienceplatform.org/nightly-build/release_tip/release_tip/documentation/blue_carbon.html" target="_blank">Documentation</a></td></tr>
 <tr><td><b>Use-Cases</b></td><td>Belize</td></tr>
 <tr><td><b>Publications</b></td><td>None</td></tr>
-</table>
-<p></p>
-<div class="hr dotted clearfix">&nbsp;</div>
-<h4>&#8226; Coastal Vulnerability</h4>
-<table>
-<tr><td><b>Purpose</b></td><td>Uses geophysical and natural habitat characteristics of coastal landscapes to compare their exposure to erosion and flooding in severe weather</td></tr>
-<tr><td><b>Links</b></td><td><a href="http://www.naturalcapitalproject.org/models/coastal_vulnerability.html" target="_blank">Summary</a> | <a href="http://data.naturalcapitalandresilienceplatform.org/nightly-build/release_tip/release_tip/documentation/coastal_vulnerability.html" target="_blank">Documentation</a></td></tr>
-<tr><td><b>Use-Cases</b></td><td>Barbados | Belize | California | Mozambique | New England | Vancouver Island</td></tr>
-<tr><td><b>Publications</b></td><td>Arkema, Katie K., et al. "Coastal habitats shield people and property from sea-level rise and storms." <i>Nature Climate Change</i> (2013). <a href="docs/Arkema_etal_2013_NCC.pdf" target="_blank">doi:10.1038/nclimate1944</a><br>Langridge, Suzanne M., et al. "Key lessons for incorporating natural infrastructure into regional climate adaptation planning." <i>Ocean & Coastal Management</i> 95 (2014): 189-197. <a href="docs/Langridge_etal_2014_OCM.pdf" target="_blank">doi:10.1016/j.ocecoaman.2014.03.019</a></td></tr>
 </table>
 <p></p>
 <div class="hr dotted clearfix">&nbsp;</div>
@@ -190,32 +221,6 @@ Use the expand [+] button to learn more about InVEST models and tools that can b
 <tr><td><b>Links</b></td><td><a href="http://www.naturalcapitalproject.org/models/marine_fish_aquaculture.html" target="_blank">Summary</a> | <a href="http://data.naturalcapitalandresilienceplatform.org/nightly-build/release_tip/release_tip/documentation/marine_fish.html" target="_blank">Documentation</a></td></tr>
 <tr><td><b>Use-Cases</b></td><td>Vancouver Island</td></tr>
 <tr><td><b>Publications</b></td><td>None</td></tr>
-</table>
-<p></p>
-<h4>&#8226; Habitat Risk Assessment</h4>
-<table>
-<tr><td><b>Purpose</b></td><td>Evaluates risks posed to multiple habitats in terms of exposure to human activities and the habitat-specific consequence of that exposure for delivery of environmental services</td></tr>
-<tr><td><b>Links</b></td><td><a href="http://www.youtube.com/embed/EMOJa-XklB0" target="_blank">Video</a> | <a href="http://www.naturalcapitalproject.org/models/habitat_risk.html" target="_blank">Summary</a> | <a href="http://data.naturalcapitalandresilienceplatform.org/nightly-build/release_tip/release_tip/documentation/habitat_risk_assessment.html" target="_blank">Documentation</a></td></tr>
-<tr><td><b>Use-Cases</b></td><td>Barbados | Belize | Mozambique | Vancouver Island</td></tr>
-<tr><td><b>Publications</b></td><td>Arkema, Katie K., et al. "Assessing habitat risk from human activities to inform coastal and marine spatial planning: a demonstration in Belize." <i>Environmental Research Letters</i> 9.11 (2014): 114016. <a href="docs/Arkema_etal_2014_EL.pdf" target="_blank">doi:10.1088/1748-9326/9/11/114016</a><br>Guerry, Anne D., et al. "Modeling benefits from nature: using ecosystem services to inform coastal and marine spatial planning." <i>International Journal of Biodiversity Science, Ecosystem Services & Management</i> 8.1-2 (2012): 107-121. <a href="docs/Guerry_etal_2012_IJBSESM.pdf" target="_blank">doi:10.1080/21513732.2011.647835</a></td></tr>
-</table>
-<p></p>
-<div class="hr dotted clearfix">&nbsp;</div>
-<h4>&#8226; Marine Water Quality</h4>
-<table>
-<tr><td><b>Purpose</b></td><td>Assesses how management and human activities influence the water quality and structure of coastal and estuarine ecosystems</td></tr>
-<tr><td><b>Links</b></td><td><a href="http://www.naturalcapitalproject.org/models/marine_water_quality.html" target="_blank">Summary</a> | <a href="http://data.naturalcapitalandresilienceplatform.org/nightly-build/release_tip/release_tip/documentation/marine_water_quality.html" target="_blank">Documentation</a></td></tr>
-<tr><td><b>Use-Cases</b></td><td>Vancouver Island</td></tr>
-<tr><td><b>Publications</b></td><td>Guerry, Anne D., et al. "Modeling benefits from nature: using ecosystem services to inform coastal and marine spatial planning." <i>International Journal of Biodiversity Science, Ecosystem Services & Management</i> 8.1-2 (2012): 107-121. <a href="docs/Guerry_etal_2012_IJBSESM.pdf" target="_blank">doi:10.1080/21513732.2011.647835</a></td></tr>
-</table>
-<p></p>
-<div class="hr dotted clearfix">&nbsp;</div>
-<h4>&#8226; Overlap Analysis</h4>
-<table>
-<tr><td><b>Purpose</b></td><td>Estimates the relative importance of regions for human use; outputs can help decision-makers weigh potential conflicts among spatially-explicit management options that involve new activities or new infrastructure</td></tr>
-<tr><td><b>Links</b></td><td><a href="http://www.naturalcapitalproject.org/models/overlap_analysis.html" target="_blank">Summary</a> | <a href="http://data.naturalcapitalandresilienceplatform.org/nightly-build/release_tip/release_tip/documentation/overlap_analysis.html" target="_blank">Documentation</a></td></tr>
-<tr><td><b>Use-Cases</b></td><td>Belize | New England | Vancouver Island</td></tr>
-<tr><td><b>Publications</b></td><td>Kim, Choong-Ki, et al. "Catching the Right Wave: Evaluating Wave Energy Resources and Potential Compatibility with Existing Marine and Coastal Uses." <i>PloS one</i> 7.11 (2012): e47598. <a href="docs/Kim_etal_2012_PLOSONE.pdf" target="_blank">doi:10.1371/journal.pone.0047598</a></td></tr>
 </table>
 <p></p>
 <div class="hr dotted clearfix">&nbsp;</div>
